﻿shmuel 21.04.2015 16:19:03 +0200 - build 509

1. LuaFAR (generic plugin):
   Параметр ENV_PREFIX больше не имеет значения по умолчанию: ни в C-файле, ни в мейк-файле.
   Теперь для того, чтобы LuaFAR-плагин при инициализации обрабатывал переменные окружения,
   параметр ENV_PREFIX должен быть задан явно при сборке плагина.

shmuel 17.04.2015 00:31:25 +0200 - build 508

1. M#2986: far /e падает при попытке вызвать юзер меню макросом.

shmuel 12.04.2015 23:18:52 +0200 - build 507

1. Рефакторинг.

shmuel 10.04.2015 17:44:53 +0200 - build 506

1. LuaFAR: изменения, связанные с функцией far.SubscribeDialogDrawEvents:
   - Функция не обрабатывает параметры и не возвращает значения.
   - При открытии каждого нового диалога группа событий перерисовки не передаётся
     в export.ProcessDialogEvent, покуда не будет вызвана far.SubscribeDialogDrawEvents.

shmuel 10.04.2015 01:00:29 +0200 - build 505

1. Рефакторинг.

shmuel 08.04.2015 21:29:15 +0200 - build 504

1. Командная строка: символ '=' можно использовать также и при вызове файла-скрипта, то-есть перед
   символом '@'.

shmuel 07.04.2015 13:05:26 +0200 - build 503

1. Мелкий рефакторинг.

shmuel 07.04.2015 00:27:31 +0200 - build 502

1. M#2685: Выполнять заданные в командной строке lua: скрипты синхронно.

shmuel 30.03.2015 16:43:55 +0200 - build 501

1. LuaFAR: оптимизация по скорости far.MakeMenuItems (и, опосредованно, far.Show).

shmuel 27.03.2015 14:27:00 +0200 - build 500

1. LuaFAR: мелкий рефакторинг.

2. Уточнение 493: eval(s,0) снова исполняется в окружении вызывающего его макроса.

shmuel 26.03.2015 09:34:26 +0200 - build 499

1. Добавлена функция-заглушка NoCommandLine, по аналогии с функциями NoMacro, NoEvent, NoMenuItem.

shmuel 25.03.2015 16:11:10 +0200 - build 498

1. Добавлена возможность загрузки из макрофайлов пользовательских префиксов командной строки.
   Этим занимается новая загрузочная функция 'CommandLine'.

zg 21.03.2015 14:29:00 +0200 - build 497
